many new translations.

--- a/ga-IE/browser/chrome/browser/browser.properties
+++ b/ga-IE/browser/chrome/browser/browser.properties
@@ -106,7 +106,7 @@ badContentBlocked.notblocked.message=Níl %S ag cur cosc ar aon ábhar ar an lea
 crashedpluginsMessage.title=Thuairteáil forlíontán %S.
 crashedpluginsMessage.reloadButton.label=Athluchtaigh an leathanach
 crashedpluginsMessage.reloadButton.accesskey=A
-crashedpluginsMessage.submitButton.label=Seol tuairisc ar thuairteáil
+crashedpluginsMessage.submitButton.label=Seol tuairisc ar chliseadh
 crashedpluginsMessage.submitButton.accesskey=S
 crashedpluginsMessage.learnMore=Tuilleadh Eolais…
 
