--- a/ga-IE/browser/chrome/browser/loop/loop.properties
+++ b/ga-IE/browser/chrome/browser/loop/loop.properties
@@ -194,7 +194,7 @@ incoming_call_accept_audio_video_tooltip=Glac le fís-chomhrá
 incoming_call_cancel_button=Cealaigh
 incoming_call_cancel_and_block_button=Cealaigh agus Cuir Cosc
 incoming_call_block_button=Coisc
-hangup_button_title=Hang up
+hangup_button_title=Croch
 hangup_button_caption2=Scoir
 mute_local_audio_button_title=Balbhaigh an fhuaim
 unmute_local_audio_button_title=Díbhalbhaigh an fhuaim
@@ -222,14 +222,14 @@ call_progress_connecting_description=Ag ceangal…
 ## LOCALIZATION NOTE (call_progress_ringing_description): This is displayed
 ## when the other client is actually ringing.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
-call_progress_ringing_description=Ringing…
+call_progress_ringing_description=Ag clingeadh…
 
 peer_ended_conversation2=Chuir an duine ar chuir tú glaoch air deireadh leis an gcomhrá.
 conversation_has_ended=Cuireadh deireadh leis an gcomhrá.
 restart_call=Atosaigh
 
 generic_failure_title=Tharla earráid.
-generic_failure_with_reason2=You can try again or email a link to be reached at later.
+generic_failure_with_reason2=Bheifeá in ann iarracht eile a dhéanamh, nó nasc a sheoladh lenarbh fhéidir dul i dteagmháil leat ar ball.
 generic_failure_no_reason2=An bhfuil fonn ort triail eile a bhaint as?
 
 ## LOCALIZATION NOTE (contact_offline_title): Title for
@@ -266,22 +266,22 @@ legal_text_privacy = Fógra Príobháideachais
 powered_by_beforeLogo=Á chumhachtú ag
 powered_by_afterLogo=
 
-feedback_call_experience_heading2=How was your conversation?
-feedback_what_makes_you_sad=What makes you sad?
+feedback_call_experience_heading2=Conas a d'éirigh le do chomhrá?
+feedback_what_makes_you_sad=Cén fáth a bhfuil brón ort?
 feedback_thank_you_heading=Go raibh maith agat as an aiseolas!
 feedback_category_audio_quality=Cáilíocht na fuaime
 feedback_category_video_quality=Cáilíocht na físe
 feedback_category_was_disconnected=Briseadh an ceangal
-feedback_category_confusing=Confusing
+feedback_category_confusing=Róchasta
 feedback_category_other=Eile:
-feedback_custom_category_text_placeholder=What went wrong?
+feedback_custom_category_text_placeholder=Cad a tharla?
 feedback_submit_button=Seol
 feedback_back_button=Siar
 ## LOCALIZATION NOTE (feedback_window_will_close_in2):
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
-feedback_window_will_close_in2=This window will close in {{countdown}} second;This window will close in {{countdown}} seconds
+feedback_window_will_close_in2=Dúnfaidh an fhuinneog seo i gceann {{countdown}} soicind;Dúnfaidh an fhuinneog seo i gceann {{countdown}} shoicind;Dúnfaidh an fhuinneog seo i gceann {{countdown}} shoicind;Dúnfaidh an fhuinneog seo i gceann {{countdown}} soicind;Dúnfaidh an fhuinneog seo i gceann {{countdown}} soicind
 ## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
 ## a signed-in to signed-in user call.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
