--- a/ga-IE/browser/chrome/browser/preferences/preferences.properties
+++ b/ga-IE/browser/chrome/browser/preferences/preferences.properties
@@ -115,7 +115,7 @@ offlinepermissionstitle=Sonraí As Líne
 #   %1$S = size
 #   %2$S = unit (MB, KB, etc.)
 actualDiskCacheSize=Tá %1$S %2$S i do thaisce Gréasáin faoi láthair
-actualDiskCacheSizeCalculated=Calculating web content cache size…
+actualDiskCacheSizeCalculated=Méid na taisce á háireamh…
 
 ####Preferences::Advanced::Network
 #LOCALIZATION NOTE: The next string is for the disk usage of the application cache.
