--- a/ga-IE/browser/chrome/browser/shellservice.properties
+++ b/ga-IE/browser/chrome/browser/shellservice.properties
@@ -7,7 +7,7 @@ safeModeLabel=%S Mód &Slán
 
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
-setDefaultBrowserMessage2          = Get the most out of %S by setting it as your default browser
+setDefaultBrowserMessage2          = Úsáid %S mar do bhrabhsálaí réamhshocraithe chun an tairbhe is mó a bhaint as
 setDefaultBrowserConfirm.label     = Úsáid %S mar mo bhrabhsálaí réamhshocraithe
 setDefaultBrowserConfirm.accesskey = U
 setDefaultBrowserOptions.label     = Roghanna
