--- a/ga-IE/dom/chrome/dom/dom.properties
+++ b/ga-IE/dom/chrome/dom/dom.properties
@@ -125,19 +125,19 @@ PluginHangUIMessage=Seans go bhfuil %S gnóthach, nó níl sé ag freagairt. Tig
 PluginHangUIWaitButton=Lean ar aghaidh
 PluginHangUIStopButton=Stop an forlíontán
 # LOCALIZATION NOTE: Do not translate "mozHidden", "mozVisibilityState", "hidden", or "visibilityState"
-PrefixedVisibilityApiWarning='mozHidden' and 'mozVisibilityState' are deprecated.  Please use the unprefixed 'hidden' and 'visibilityState' instead.
+PrefixedVisibilityApiWarning=Ní mholtar 'mozHidden' nó 'mozVisibilityState' a úsáid a thuilleadh. Bain úsáid as 'hidden' and 'visibilityState' ina n-ionad.
 # LOCALIZATION NOTE: Do not translate "NodeIterator" or "detach()".
 NodeIteratorDetachWarning=Calling detach() on a NodeIterator no longer has an effect.
 # LOCALIZATION NOTE: Do not translate "LenientThis" and "this"
 LenientThisWarning=Ignoring get or set of property that has [LenientThis] because the "this" object is incorrect.
 # LOCALIZATION NOTE: Do not translate "nsIDOMWindowUtils", "getWindowWithOuterId", or "nsIWindowMediator"
-GetWindowWithOuterIdWarning=Use of nsIDOMWindowUtils.getOuterWindowWithId() is deprecated.  Instead, use the nsIWindowMediator method of the same name.
+GetWindowWithOuterIdWarning=Ní mholtar nsIDOMWindowUtils.getOuterWindowWithId() a úsáid a thuilleadh. Bain úsáid as an bhfeidhm nsIWindowMediator leis an ainm céanna ina ionad.
 # LOCALIZATION NOTE: Do not translate "getPreventDefault" or "defaultPrevented".
-GetPreventDefaultWarning=Use of getPreventDefault() is deprecated.  Use defaultPrevented instead.
+GetPreventDefaultWarning=Ní mholtar getPreventDefault() a úsáid a thuilleadh. Bain úsáid as defaultPrevented ina ionad.
 # LOCALIZATION NOTE: Do not translate "getUserData", "setUserData", "WeakMap", or "element.dataset".
-GetSetUserDataWarning=Use of getUserData() or setUserData() is deprecated.  Use WeakMap or element.dataset instead.
+GetSetUserDataWarning=Ní mholtar getUserData() nó setUserData() a úsáid a thuilleadh. Bain úsáid as WeakMap nó element.dataset ina ionad.
 # LOCALIZATION NOTE: Do not translate "mozGetAsFile" or "toBlob"
-MozGetAsFileWarning=The non-standard mozGetAsFile method is deprecated and will soon be removed.  Use the standard toBlob method instead.
+MozGetAsFileWarning=Ní mholtar an fheidhm neamhchaighdeánach mozGetAsFile a úsáid a thuilleadh. Bain úsáid as an bhfeidhm chaighdeánach toBlob ina ionad.
 # LOCALIZATION NOTE: Do not translate "captureEvents()" or "addEventListener()"
 UseOfCaptureEventsWarning=Use of captureEvents() is deprecated. To upgrade your code, use the DOM 2 addEventListener() method. For more help http://developer.mozilla.org/en/docs/DOM:element.addEventListener
 # LOCALIZATION NOTE: Do not translate "releaseEvents()" or "removeEventListener()"
@@ -145,67 +145,67 @@ UseOfReleaseEventsWarning=Use of releaseEvents() is deprecated. To upgrade your 
 # LOCALIZATION NOTE: Do not translate "document.load()" or "XMLHttpRequest"
 UseOfDOM3LoadMethodWarning=Use of document.load() is deprecated. To upgrade your code, use the DOM XMLHttpRequest object. For more help https://developer.mozilla.org/en/XMLHttpRequest
 # LOCALIZATION NOTE: Do not translate "window.showModalDialog()" or "window.open()" 
-ShowModalDialogWarning=Use of window.showModalDialog() is deprecated. Use window.open() instead. For more help https://developer.mozilla.org/en-US/docs/Web/API/Window.open
+ShowModalDialogWarning=Ní mholtar window.showModalDialog() a úsáid a thuilleadh. Bain úsáid as window.open() ina ionad. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/Window.open
 # LOCALIZATION NOTE: Do not translate "window._content" or "window.content"
-Window_ContentWarning=window._content is deprecated.  Please use window.content instead.
+Window_ContentWarning=Ní mholtar window._content a úsáid a thuilleadh. Bain úsáid as window.content ina ionad.
 # LOCALIZATION NOTE: Do not translate "XMLHttpRequest"
 SyncXMLHttpRequestWarning=Synchronous XMLHttpRequest on the main thread is deprecated because of its detrimental effects to the end user's experience. For more help http://xhr.spec.whatwg.org/
 ImplicitMetaViewportTagFallback=No meta-viewport tag found. Please explicitly specify one to prevent unexpected behavioural changes in future versions. For more help https://developer.mozilla.org/en/docs/Mozilla/Mobile/Viewport_meta_tag
 # LOCALIZATION NOTE: Do not translate "DataContainerEvent" or "CustomEvent"
-DataContainerEventWarning=Use of DataContainerEvent is deprecated. Use CustomEvent instead.
+DataContainerEventWarning=Ní mholtar DataContainerEvent a úsáid a thuilleadh. Bain úsáid as CustomEvent ina ionad.
 # LOCALIZATION NOTE: Do not translate "sendAsBinary" or "send(Blob data)"
-SendAsBinaryWarning=The non-standard sendAsBinary method is deprecated and will soon be removed. Use the standard send(Blob data) method instead.
+SendAsBinaryWarning=Ní mholtar an fheidhm neamhchaighdeánach sendAsBinary a úsáid a thuilleadh. Bain úsáid as an bhfeidhm chaighdeánach send(Blob data) ina ionad.
 # LOCALIZATION NOTE: Do not translate "window.controllers"
 Window_ControllersWarning=window.controllers is deprecated. Do not use it for UA detection.
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Down" and "ArrowDown".
-KeyNameDownWarning=KeyboardEvent.key value "Down" is obsolete and will be renamed to "ArrowDown". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameDownWarning=Tá an luach KeyboardEvent.key "Down" dulta as feidhm agus cuirfear an t-ainm "ArrowDown" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Left" and "ArrowLeft".
-KeyNameLeftWarning=KeyboardEvent.key value "Left" is obsolete and will be renamed to "ArrowLeft". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameLeftWarning=Tá an luach KeyboardEvent.key "Left" dulta as feidhm agus cuirfear an t-ainm "ArrowLeft" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Right" and "ArrowRight".
-KeyNameRightWarning=KeyboardEvent.key value "Right" is obsolete and will be renamed to "ArrowRight". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameRightWarning=Tá an luach KeyboardEvent.key "Right" dulta as feidhm agus cuirfear an t-ainm "ArrowRight" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Up" and "ArrowUp".
-KeyNameUpWarning=KeyboardEvent.key value "Up" is obsolete and will be renamed to "ArrowUp". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameUpWarning=Tá an luach KeyboardEvent.key "Up" dulta as feidhm agus cuirfear an t-ainm "ArrowUp" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Crsel" and "CrSel".
-KeyNameCrselWarning=KeyboardEvent.key value "Crsel" is obsolete and will be renamed to "CrSel". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameCrselWarning=Tá an luach KeyboardEvent.key "Crsel" dulta as feidhm agus cuirfear an t-ainm "CrSel" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Del" and "Delete".
-KeyNameDelWarning=KeyboardEvent.key value "Del" is obsolete and will be renamed to "Delete". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameDelWarning=Tá an luach KeyboardEvent.key "Del" dulta as feidhm agus cuirfear an t-ainm "Delete" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Exsel" and "ExSel".
-KeyNameExselWarning=KeyboardEvent.key value "Exsel" is obsolete and will be renamed to "ExSel". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameExselWarning=Tá an luach KeyboardEvent.key "Exsel" dulta as feidhm agus cuirfear an t-ainm "ExSel" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Menu" and "ContextMenu".
-KeyNameMenuWarning=KeyboardEvent.key value "Menu" is obsolete and will be renamed to "ContextMenu". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameMenuWarning=Tá an luach KeyboardEvent.key "Menu" dulta as feidhm agus cuirfear an t-ainm "ContextMenu" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Esc" and "Escape".
-KeyNameEscWarning=KeyboardEvent.key value "Esc" is obsolete and will be renamed to "Escape". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameEscWarning=Tá an luach KeyboardEvent.key "Esc" dulta as feidhm agus cuirfear an t-ainm "Escape" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Nonconvert" and "NonConvert".
-KeyNameNonconvertWarning=KeyboardEvent.key value "Nonconvert" is obsolete and will be renamed to "NonConvert". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameNonconvertWarning=Tá an luach KeyboardEvent.key "Nonconvert" dulta as feidhm agus cuirfear an t-ainm "NonConvert" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "HalfWidth" and "Hankaku".
-KeyNameHalfWidthWarning=KeyboardEvent.key value "HalfWidth" is obsolete and will be renamed to "Hankaku". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameHalfWidthWarning=Tá an luach KeyboardEvent.key "HalfWidth" dulta as feidhm agus cuirfear an t-ainm "Hankaku" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "RomanCharacters", "Romaji" and "Eisu".
-KeyNameRomanCharactersWarning=KeyboardEvent.key value "RomanCharacters" is obsolete and will be renamed to "Romaji" or remapped to "Eisu". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameRomanCharactersWarning=Tá an luach KeyboardEvent.key "RomanCharacters" dulta as feidhm agus cuirfear an t-ainm "Romaji" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FullWith" and "Zenkaku".
-KeyNameFullWidthWarning=KeyboardEvent.key value "FullWidth" is obsolete and will be renamed to "Zenkaku". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameFullWidthWarning=Tá an luach KeyboardEvent.key "FullWidth" dulta as feidhm agus cuirfear an t-ainm "Zenkaku" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "SelectMedia" and "MediaSelect".
-KeyNameSelectMediaWarning=KeyboardEvent.key value "SelectMedia" is obsolete and will be renamed to "MediaSelect". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameSelectMediaWarning=Tá an luach KeyboardEvent.key "SelectMedia" dulta as feidhm agus cuirfear an t-ainm "MediaSelect" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "MediaNextTrack" and "MediaTrackNext".
-KeyNameMediaNextTrackWarning=KeyboardEvent.key value "MediaNextTrack" is obsolete and will be renamed to "MediaTrackNext". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameMediaNextTrackWarning=Tá an luach KeyboardEvent.key "MediaNextTrack" dulta as feidhm agus cuirfear an t-ainm "MediaTrackNext" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "MediaPreviousTrack" and "MediaTrackPrevious".
-KeyNameMediaPreviousTrackWarning=KeyboardEvent.key value "MediaPreviousTrack" is obsolete and will be renamed to "MediaTrackPrevious". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameMediaPreviousTrackWarning=Tá an luach KeyboardEvent.key "MediaPreviousTrack" dulta as feidhm agus cuirfear an t-ainm "MediaTrackPrevious" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Red" and "ColorF0Red".
-KeyNameRedWarning=KeyboardEvent.key value "Red" is obsolete and will be renamed to "ColorF0Red". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameRedWarning=Tá an luach KeyboardEvent.key "Red" dulta as feidhm agus cuirfear an t-ainm "ColorF0Red" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Green" and "ColorF1Green".
-KeyNameGreenWarning=KeyboardEvent.key value "Green" is obsolete and will be renamed to "ColorF1Green". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameGreenWarning=Tá an luach KeyboardEvent.key "Green" dulta as feidhm agus cuirfear an t-ainm "ColorF1Green" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Yellow" and "ColorF2Yellow".
-KeyNameYellowWarning=KeyboardEvent.key value "Yellow" is obsolete and will be renamed to "ColorF2Yellow". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameYellowWarning=Tá an luach KeyboardEvent.key "Yellow" dulta as feidhm agus cuirfear an t-ainm "ColorF2Yellow" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Blue" and "ColorF3Blue".
-KeyNameBlueWarning=KeyboardEvent.key value "Blue" is obsolete and will be renamed to "ColorF3Blue". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameBlueWarning=Tá an luach KeyboardEvent.key "Blue" dulta as feidhm agus cuirfear an t-ainm "ColorF3Blue" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Live".
-KeyNameLiveWarning=KeyboardEvent.key value "Live" is obsolete and will be removed. For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameLiveWarning=Tá an luach KeyboardEvent.key "Live" dulta as feidhm agus bainfear é amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Apps".
-KeyNameAppsWarning=KeyboardEvent.key value "Apps" is obsolete and will be removed. For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameAppsWarning=Tá an luach KeyboardEvent.key "Apps" dulta as feidhm agus bainfear é amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FastFwd" and "MediaFastForward".
-KeyNameFastFwdWarning=KeyboardEvent.key value "FastFwd" is obsolete and will be renamed to "MediaFastForward". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameFastFwdWarning=Tá an luach KeyboardEvent.key "FastFwd" dulta as feidhm agus cuirfear an t-ainm "MediaFastForward" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Zoom" and "ZoomToggle".
-KeyNameZoomWarning=KeyboardEvent.key value "Zoom" is obsolete and will be renamed to "ZoomToggle". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameZoomWarning=Tá an luach KeyboardEvent.key "Zoom" dulta as feidhm agus cuirfear an t-ainm "ZoomToggle" air amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
-KeyNameDeadKeysWarning=KeyboardEvent.key values starting with "Dead" are obsolete and will be merged into just "Dead". For more help https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+KeyNameDeadKeysWarning=Tá na luachanna KeyboardEvent.key a thosaíonn le "Dead" dulta as feidhm agus cumascfar le "Dead" iad amach anseo. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=Importing XUL nodes into a content document is deprecated. This functionality may be removed soon.
 XMLDocumentLoadPrincipalMismatch=Use of document.load forbidden on Documents that come from other Windows. Only the Window in which a Document was created is allowed to call .load on that Document. Preferably, use XMLHttpRequest instead.
