--- a/ga-IE/dom/chrome/layout/htmlparser.properties
+++ b/ga-IE/dom/chrome/layout/htmlparser.properties
@@ -129,4 +129,4 @@ errSelfClosing=Úsáideadh an chomhréir fhéindúnta (“/>”) le heilimint ne
 errNoCheckUnclosedElementsOnStack=Eilimintí neamhdhúnta ar an gcruach.
 errEndTagDidNotMatchCurrentOpenElement=Ní ionann clib dheiridh “%1$S” agus ainm na heiliminte atá oscailte faoi láthair (“%2$S”).
 errEndTagViolatesNestingRules=Sáraíonn clib dheiridh “%1$S” rialacha a bhaineann le neadú.
-errEndWithUnclosedElements=End tag for “%1$S” seen, but there were unclosed elements.
+errEndWithUnclosedElements=Chonacthas clib dheiridh “%1$S” ach bhí eilimintí gan dúnadh ann.
