--- a/ga-IE/mobile/android/chrome/browser.properties
+++ b/ga-IE/mobile/android/chrome/browser.properties
@@ -214,8 +214,8 @@ selectionHelper.textCopied=Cóipeáladh an téacs go dtí an ghearrthaisce
 # LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
 # dialog/prompt.
 casting.sendToDevice=Seol chuig Gléas
-casting.mirrorTab=Mirror Tab
-casting.mirrorTabStop=Stop Mirror
+casting.mirrorTab=Scáthánaigh an Cluaisín
+casting.mirrorTabStop=Stop an Scáthánú
 
 # Context menu
 contextmenu.openInNewTab=Oscail an Nasc i gCluaisín Nua
@@ -321,9 +321,9 @@ remoteNotificationTitle=Dífhabhtú %S ar siúl
 remoteNotificationGenericName=Aip
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
-remoteNotificationMessage=Ag éisteach ar phort %S
+remoteNotificationMessage=Ag éisteacht ar phort %S
 # LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
-remoteStartNotificationTitle=Activate debugging for %S
+remoteStartNotificationTitle=Tosaigh dífhabhtú %S
 # LOCALIZATION NOTE (remoteStartNotificationMessage):
 remoteStartNotificationMessage=Tapáil chun an dífhabhtóir i gcéin a ghníomhachtú
 
@@ -356,7 +356,7 @@ getUserMedia.videoSource.default = Ceamara %S
 getUserMedia.videoSource.frontCamera = Ceamara tosaigh
 getUserMedia.videoSource.backCamera = Ceamara cúil
 getUserMedia.videoSource.none = Gan Fís
-getUserMedia.videoSource.tabShare = Choose a tab to stream
+getUserMedia.videoSource.tabShare = Roghnaigh cluaisín le sruthú
 getUserMedia.videoSource.prompt = Foinse físe
 getUserMedia.audioDevice.default = Micreafón %S
 getUserMedia.audioDevice.none = Gan Fuaim
@@ -375,7 +375,7 @@ openInApp.ok = OK
 openInApp.cancel = Cealaigh
 
 #Tab sharing
-tabshare.title = "Choose a tab to stream"
+tabshare.title = "Roghnaigh cluaisín le sruthú"
 #Tabs in context menus
 browser.menu.context.default = Nasc
 browser.menu.context.img = Íomhá
@@ -392,4 +392,4 @@ feedHandler.subscribeWith=Liostáil le
 # This string is shown in the console when someone uses deprecated NativeWindow apis.
 # %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
 # a file they should import or the name of an api.
-nativeWindow.deprecated=%S is deprecated. Please use %S instead
+nativeWindow.deprecated=Ní mholtar %S a úsáid a thuilleadh. Ba chóir duit %S a úsáid ina ionad
