--- a/ga-IE/mobile/android/chrome/webapp.properties
+++ b/ga-IE/mobile/android/chrome/webapp.properties
@@ -56,4 +56,4 @@ retrievalFailedTitle=Theip ar #1 nuashonrú;Theip ar #1 nuashonrú;Theip ar #1 n
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Níorbh fhéidir an nuashonrú ar %1$S a íosluchtú;Níorbh fhéidir na nuashonruithe ar %1$S a íosluchtú;Níorbh fhéidir na nuashonruithe ar %1$S a íosluchtú;Níorbh fhéidir na nuashonruithe ar %1$S a íosluchtú;Níorbh fhéidir na nuashonruithe ar %1$S a íosluchtú
 
-webappsDisabled=Installing apps is disabled
+webappsDisabled=Tá suitéail aipeanna díchumasaithe
