--- a/ga-IE/toolkit/chrome/global/aboutSupport.properties
+++ b/ga-IE/toolkit/chrome/global/aboutSupport.properties
@@ -25,7 +25,7 @@ crashesTimeDays=#1 lá ó shin;#1 lá ó shin;#1 lá ó shin;#1 lá ó shin;#1 l
 # LOCALIZATION NOTE (downloadsTitleFiles): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 number of pending crash reports
-pendingReports=All Crash Reports (including #1 pending crash in the given time range);All Crash Reports (including #1 pending crashes in the given time range)
+pendingReports=Gach Tuairisc ar Chliseadh (le #1 chliseadh sa raon ama seo ar feitheamh);Gach Tuairisc ar Chliseadh (le #1 chliseadh sa raon ama seo ar feitheamh);Gach Tuairisc ar Chliseadh (le #1 chliseadh sa raon ama seo ar feitheamh);Gach Tuairisc ar Chliseadh (le #1 gcliseadh sa raon ama seo ar feitheamh);Gach Tuairisc ar Chliseadh (le #1 cliseadh sa raon ama seo ar feitheamh)
 
 # LOCALIZATION NOTE In the following strings, "Direct2D", "DirectWrite" and "ClearType" 
 # are proper nouns and should not be translated. Feel free to leave english strings if 
@@ -64,7 +64,7 @@ clearTypeParametersNotFound = Paraiméadair ClearType gan aimsiú
 adapterDescription = Cur Síos ar an gCuibheoir
 adapterVendorID = Aitheantas Díoltóra
 adapterDeviceID = Aitheantas Gléis
-adapterSubsysID = Subsys ID
+adapterSubsysID = Aitheantas Fochórais
 adapterDrivers = Tiománaithe Cuibheora
 adapterRAM = RAM an Chuibheora
 driverVersion = Leagan an Tiománaí
@@ -72,7 +72,7 @@ driverDate = Dáta an Tiománaí
 adapterDescription2 = Cur Síos ar an gCuibheoir (GPU #2) 
 adapterVendorID2 = Aitheantas Díoltóra (GPU #2) 
 adapterDeviceID2 = Aitheantas Gléis (GPU #2)
-adapterSubsysID2 = Subsys ID (GPU #2)
+adapterSubsysID2 = Aitheantas Fochórais (GPU #2)
 adapterDrivers2 = Tiománaithe Cuibheora (GPU #2)
 adapterRAM2 = RAM an Chuibheora (GPU #2)
 driverVersion2 = Leagan an Tiománaí (GPU #2)
