--- a/ga-IE/toolkit/chrome/global/devtools/styleinspector.properties
+++ b/ga-IE/toolkit/chrome/global/devtools/styleinspector.properties
@@ -86,7 +86,7 @@ ruleView.contextmenu.copy.accessKey=C
 
 # LOCALIZATION NOTE (ruleView.contextmenu.copyColor): Text displayed in the rule
 # and computed view context menu when a color value was clicked.
-ruleView.contextmenu.copyColor=Copy Color
+ruleView.contextmenu.copyColor=Cóipeáil Dath
 
 # LOCALIZATION NOTE (ruleView.contextmenu.copyColor.accessKey): Access key for
 # the rule and computed view context menu "Copy Color" entry.
