--- a/ga-IE/webapprt/webapprt/overrides/dom.properties
+++ b/ga-IE/webapprt/webapprt/overrides/dom.properties
@@ -145,10 +145,10 @@ UseOfReleaseEventsWarning=Use of releaseEvents() is deprecated. To upgrade your 
 # LOCALIZATION NOTE: Do not translate "document.load()" or "XMLHttpRequest"
 UseOfDOM3LoadMethodWarning=Use of document.load() is deprecated. To upgrade your code, use the DOM XMLHttpRequest object. For more help https://developer.mozilla.org/en/XMLHttpRequest
 # LOCALIZATION NOTE: Do not translate "window.showModalDialog()" or "window.open()" 
-ShowModalDialogWarning=Use of window.showModalDialog() is deprecated. Use window.open() instead. For more help https://developer.mozilla.org/en-US/docs/Web/API/Window.open
+ShowModalDialogWarning=Ní mholtar window.showModalDialog() a úsáid a thuilleadh. Bain úsáid as window.open() ina ionad. Chun tuilleadh eolais a fháil, tabhair cuairt ar https://developer.mozilla.org/en-US/docs/Web/API/Window.open
 # LOCALIZATION NOTE: Do not translate "window._content" or "window.content"
 Window_ContentWarning=window._content is deprecated. Please use window.content instead.
 # LOCALIZATION NOTE: Do not translate "XMLHttpRequest"
 SyncXMLHttpRequestWarning=Synchronous XMLHttpRequest on the main thread is deprecated because of its detrimental effects to the end user's experience. For more help http://xhr.spec.whatwg.org/
 # LOCALIZATION NOTE: Do not translate "DataContainerEvent" or "CustomEvent"
-DataContainerEventWarning=Use of DataContainerEvent is deprecated. Use CustomEvent instead.
+DataContainerEventWarning=Ní mholtar DataContainerEvent a úsáid a thuilleadh. Bain úsáid as CustomEvent ina ionad.
