--- a/ga-IE/browser/chrome/browser/newTab.properties
+++ b/ga-IE/browser/chrome/browser/newTab.properties
@@ -12,7 +12,7 @@ newtab.sponsored.button=URRAITHE
 # LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
 # the (X) block icon. %2$S will be replaced by an active link using string
 # newtab.learn.link as text.
-newtab.sponsored.explain=This tile is being shown to you on behalf of a Mozilla partner. You can remove it at any time by clicking the %1$S button. %2$S
+newtab.sponsored.explain=Táimid ag taispeáint na tíle seo duit ar son comhpháirtí de chuid Mozilla. Bheifeá in ann í a bhaint tríd an chnaipe %1$S a chliceáil. %2$S
 # LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
 # the gear icon used to customize the new tab window. %2$S will be replaced by
 # an active link using string newtab.learn.link as text.
