--- a/ga-IE/browser/chrome/browser/quitDialog.properties
+++ b/ga-IE/browser/chrome/browser/quitDialog.properties
@@ -10,4 +10,4 @@ saveTitle=&Sábháil agus Scoir
 neverAsk2=&Ná fiafraigh díom arís
 message=An bhfuil fonn ort do chuid cluaisíní agus fuinneoga a shábháil don chéad uair eile a thosóidh %S?
 messageNoWindows=An bhfuil fonn ort do chuid cluaisíní a shábháil don chéad uair eile a thosóidh %S?
-messagePrivate=You're in private browsing mode. Quitting %S now will discard all your open tabs and windows.
+messagePrivate=Tá brabhsáil phríobháideach ar siúl. Má scoireann tú ó %S anois, caillfidh tú gach cluaisín agus fuinneog atá oscailte.
