--- a/ga-IE/browser/chrome/browser/syncSetup.properties
+++ b/ga-IE/browser/chrome/browser/syncSetup.properties
@@ -61,6 +61,6 @@ disconnect.verify.description = Ní shioncrónóidh %S le do chuntas a thuillead
 relinkVerify.title = Rabhadh: Cumasc
 relinkVerify.heading = An bhfuil tú cinnte gur mhaith leat logáil isteach i Sync?
 # LOCALIZATION NOTE (relinkVerify.description): Email address of a user previously signed into sync.
-relinkVerify.description = A different user was previously signed in to Sync on this computer. Signing in will merge this browser’s bookmarks, passwords and other settings with %S
+relinkVerify.description = Bhí úsáideoir eile logáilte isteach in Sync ar an ríomhaire seo. Má logálann tú isteach anois, cumascfar na leabharmharcanna, focail fhaire agus socruithe eile sa bhrabhsálaí seo le %S
 
 manage.pageTitle = Bainistigh Sync
