[cy] update from Pootle (firefox)

--- a/cy/security/manager/chrome/pipnss/nsserrors.properties
+++ b/cy/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,6 +122,18 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=Derbyniodd SSL ddata estyniad NPN annilys.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=Nid yw'r nodwedd SSL hwn yn cael ei gynnal ar gyfer cysylltiadau SSL 2.0.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=Nid yw'r nodweddion SSL hyn yn cael eu cynnal ar weinyddion.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=Nid yw'r nodweddion SSL hyn yn cael eu cynnal ar raglenni.
+SSL_ERROR_INVALID_VERSION_RANGE=Nid ys ystod fersiwn SSL yn ddilys.
+SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=Dewisodd cyfoed swît seiffr SSL sydd wedi ei atal ar gyfer y protocol fersiwn yma.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=Mae SSL wedi derbyn neges ysgwyd llaw Hello Verify Request anffurf.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=Mae SSL wedi derbyn neges ysgwyd llaw Hello Verify Request annisgwyl.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_VERSION=Nid yw'r nodwedd SSL hwn yn cael ei gynnal ar gyfer y fersiwn protocol.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=Mae SSL wedi derbyn neges ysgwyd llaw Statws Tystysgrif annisgwyl.
+SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=Algorithm hash anghynaledig wedi ei ddefnyddio gan gyfoed TLS.
+SSL_ERROR_DIGEST_FAILURE=Methodd swyddogaeth crynhoi.
+SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=Algorithm llofnod anghywir wedi ei bennu mewn elfen llofnod digidol.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=Roedd yr estyniad negydu protocol yn barod ond cafodd yr adalw ei glirio cyn fod ei angen.
+SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=Nid yw'r gweinydd yn cynnal protocolau mae'r client yn ei hysbysu yn yr estyniad ALPN.
+SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=Gwrthododd y gweinydd yr ysgwyd llaw oherwydd i'r client israddio i fersiwn TLS is na mae'r gweinydd yn ei gynnal.
 SEC_ERROR_IO=Digwyddodd gwall I/O yn ystod dilysu diogelwch.
 SEC_ERROR_LIBRARY_FAILURE=methiant llyfrgell diogelwch.
 SEC_ERROR_BAD_DATA=llyfrgell diogelwch: derbyniwyd data gwael.
