--- a/cy/toolkit/chrome/global/charsetMenu.properties
+++ b/cy/toolkit/chrome/global/charsetMenu.properties
@@ -64,6 +64,7 @@ ISO-8859-2.key   =       l
 ISO-8859-2       = Canol Ewrop (ISO)
 
 # Chinese, Simplified
+gbk.bis.key      =          S
 gbk.bis          = Tsieinëeg, Symledig
 
 # Chinese, Traditional
