--- a/cy/dom/chrome/security/security.properties
+++ b/cy/dom/chrome/security/security.properties
@@ -16,3 +16,4 @@ InsecurePasswordsPresentOnIframe=Mae'r meysydd cyfrinair yn cyflwyno iframe (htt
 LoadingMixedActiveContent=Llwytho cynnwys gweithredol (anniogel) cymysg ar dudalen diogel "%1$S"
 LoadingMixedDisplayContent=Llwytho cynnwys gweithredol (anniogel) cymysg dangos ar dudalen diogel "%1$S"
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+BothAllowScriptsAndSameOriginPresent=Mae modd i iframe sydd ag allow-scripts ac allow-same-origin i'w briodweddau sandbox fedru tynnu ei sandbox.
