--- a/cy/toolkit/chrome/global/resetProfile.properties
+++ b/cy/toolkit/chrome/global/resetProfile.properties
@@ -8,3 +8,5 @@
 resetUnusedProfile.message=Mae'n edrych fel nad ydych wedi cychwyn %S ers tro. Hoffech chi ei lanhau ar gyfer profiad fel newydd? A gyda llaw, croeso nôl!
 
 # LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=Adnewyddu %S…
+refreshProfile.resetButton.accesskey=A
