--- a/hi-IN/dom/chrome/accessibility/AccessFu.properties
+++ b/hi-IN/dom/chrome/accessibility/AccessFu.properties
@@ -157,6 +157,7 @@ statePressed     =    दबाया गया
 stateExpanded    =    विस्तारित
 stateCollapsed   =    संकुचित
 stateUnavailable =    अनुपलब्ध
+stateReadonly    =    केवल पठनीय
 stateRequired    =    जरूरी
 stateTraversed   =    देखा गया
 stateHasPopup    =    पाप अप है
