--- a/hi-IN/toolkit/chrome/global/autocomplete.properties
+++ b/hi-IN/toolkit/chrome/global/autocomplete.properties
@@ -10,6 +10,8 @@ searchWithEngine = %S से खोजें
 # %1$S is the search engine's name, %2$S is the search query.
 # This format was chosen because the provider can also end with "Search"
 # (e.g.: MSN Search).
+searchWithEngineForQuery = %2$S — साथ खोज %1$S
 switchToTab = 'टैब में स्विच करें
 # LOCALIZATION NOTE (visitURL):
 # %S is the URL to visit.
+visitURL = जाएँ %S
