--- a/hi-IN/toolkit/chrome/global/charsetMenu.properties
+++ b/hi-IN/toolkit/chrome/global/charsetMenu.properties
@@ -64,6 +64,7 @@ ISO-8859-2.key   =       एल
 ISO-8859-2       = मध्य यूरोपीय (ISO)
 
 # Chinese, Simplified
+gbk.bis.key      =          S {ok}
 gbk.bis          = चीनी सरलीकृत
 
 # Chinese, Traditional
