--- a/hi-IN/toolkit/chrome/global/resetProfile.properties
+++ b/hi-IN/toolkit/chrome/global/resetProfile.properties
@@ -8,3 +8,5 @@
 resetUnusedProfile.message=ऐसा लगता है कि आपने हाल में %S आरंभ नहीं किया है. क्या आप इसे ताज़ा साफ़ करना चाहते हैं, नए अनुभव की तरह? आपका स्वागत है!
 
 # LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=ताज़ा करे %S…
+refreshProfile.resetButton.accesskey=e
