--- a/hi-IN/webapprt/webapprt/webapp.properties
+++ b/hi-IN/webapprt/webapprt/webapp.properties
@@ -45,6 +45,9 @@ webapps.install.dontinstall=मत संस्थापित करें
 webapps.uninstall.title=संस्थापित करें %S
 # LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
 # name of the webapp being uninstalled.
+webapps.uninstall.description=क्या आप %S को संस्थापित करना चाहते हैं?
+webapps.uninstall.uninstall=एप्प संस्थापित करें
+webapps.uninstall.dontuninstall=मत संस्थापित करें
 
 paymentDialog.title=भुगतान
 paymentDialog.message=किस भुगतान प्रदाता को आप उपयोग करना चाहते हैं?
