[hr] update from Pootle (firefox)

--- a/hr/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/hr/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,12 @@ quit-button.tooltiptext.linux2 = Zatvori %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Zatvori %1$S (%2$S)
 
+
+
 panic-button.label = Zaboravi
 panic-button.tooltiptext = Zaboravi neke dijelove povijesti pretraživanja
 
-loop-call-button.label = Pozovite nekoga na razgovor
-loop-call-button.tooltiptext = Pozovite nekoga na razgovor
+web-apps-button.label = Aplikacije
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
