--- a/hr/dom/chrome/accessibility/AccessFu.properties
+++ b/hr/dom/chrome/accessibility/AccessFu.properties
@@ -157,6 +157,7 @@ statePressed     =    pritisnuto
 stateExpanded    =    prošireno
 stateCollapsed   =    suženo
 stateUnavailable =    nedostupno
+stateReadonly    =    samo za čitanje
 stateRequired    =    obavezno
 stateTraversed   =    posjećeno
 stateHasPopup    =    ima skočni prozor
