--- a/hr/dom/chrome/layout/css.properties
+++ b/hr/dom/chrome/layout/css.properties
@@ -56,6 +56,7 @@ PECounterExtendsNotIdent=Očekivan identifikator za proširenje sustava, ali je 
 PECounterASWeight=Svaka težina u additive-symbols opisu mora biti manja od prethodne težine.
 PEClassSelEOF=naziv klase
 PEClassSelNotIdent=Očekivan identifikator za izbornika klase, ali pronađen '%1$S'.
+PECoordinatePair=Očekivan par koordinata, ali pronađen '%1$S'.
 PETypeSelEOF=vrsta elementa
 PETypeSelNotType=Očekivan naziv elementa ili '*', ali pronađen '%1$S'.
 PEUnknownNamespacePrefix=Nepoznati prefiks prostora naziva '%1$S'.
