--- a/hr/dom/chrome/security/security.properties
+++ b/hr/dom/chrome/security/security.properties
@@ -8,8 +8,12 @@ CrossSiteRequestBlocked=Cross-Origin zahtjev blokiran: politika jednakog izvora 
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=Stranica je definirala neispravno Strict-Transport-Security zaglavlje.
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
+InvalidPKPHeaders=Stranica je navela neispravna Public-Key-Pins zaglavlja.
 InsecurePasswordsPresentOnPage=Polja za unos lozinki na nesigurnoj (http://) stranici. Ovo predstavlja sigurnosni rizik za krađu pristupnih podataka.
 InsecureFormActionPasswordsPresent=Polja za unos lozinki s nesigurnom (http://) akcijom forme. Ovo predstavlja sigurnosni rizik za krađu pristupnih podataka.
 InsecurePasswordsPresentOnIframe=Polja za unos lozinki na nesigurnom (http://) iframeu. Ovo predstavlja sigurnosni rizik za krađu pristupnih podataka.
 LoadingMixedActiveContent=Učitavanje mješovitog (nesigurnog) aktivnog sadržaja na sigurnoj stranici "%1$S"
 LoadingMixedDisplayContent=Učitavanje mještovitog (nesigurnog) prikazanog sadržaja na sigurnoj stranici "%1$S"
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+BothAllowScriptsAndSameOriginPresent=Iframe koji ima oba allow-scripts i allow-same-origin atributa za svoj sandbox može ukloniti svoj sandbox.
