--- a/hr/netwerk/necko.properties
+++ b/hr/netwerk/necko.properties
@@ -37,3 +37,5 @@ PhishingAuth=Upravo ćete posjetiti "%1$S". Ova stranica vas može prevariti i u
 PhishingAuthAccept=Razumijem i bit ću vrlo oprezan/na
 SuperfluousAuth=Upravo ćete se prijaviti na stranicu "%1$S" s korisničkim imenom "%2$S", ali adresa ne zahtijeva prijavu. Možda se radi o pokušaju prijevare.\n\nJe li "%1$S" stranica koju želite posjetiti?
 AutomaticAuth=Upravo ćete se prijaviti na stranicu "%1$S" s korisničkim imenom "%2$S".
+
+TrackingUriBlocked=Resurs pri "%1$S" je blokiran jer je zaštita od praćenja uključena.
