--- a/hr/security/manager/chrome/pipnss/nsserrors.properties
+++ b/hr/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,6 +122,7 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL je primio nevažeće podatke NPN proši
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=SSL mogućnost nije podržana za SSL 2.0 veze.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=SSL mogućnost nije podržana za poslužitelje.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=SSL mogućnost nije podržana za klijente.
+SSL_ERROR_INVALID_VERSION_RANGE=Raspon SSL inačica nije ispravan.
 SEC_ERROR_IO=Došlo je do ulazno-izlazne greške pri sigurnosnoj autorizaciji.
 SEC_ERROR_LIBRARY_FAILURE=Greška sigurnosne biblioteke.
 SEC_ERROR_BAD_DATA=Sigurnosna biblioteka: primljeni loši podaci. sigurnosna biblioteka: loša baza podataka.
