--- a/hr/browser/chrome/browser/loop/loop.properties
+++ b/hr/browser/chrome/browser/loop/loop.properties
@@ -4,6 +4,12 @@
 
 # Panel Strings
 
+## LOCALIZATION NOTE(clientShortname2): This should not be localized and
+## should remain "Firefox Hello" for all locales.
+
+## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
+## replaced by the brand name
+
 share_link_header_text=Podijelite ovu poveznicu da biste pozvali nekoga na razgovor:
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
@@ -52,10 +58,8 @@ problem_accessing_account=Došlo je do problema prilikom pristupanja vašem rač
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Pokušaj ponovno
 
-share_email_subject3=Pozvani ste na razgovor
-## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
+## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body3=Da biste prihvatili pozivnicu, kopirajte ili kliknite na ovu poveznicu da biste započeli razgovor:\n\n{{callUrl}}
 share_button=E-pošta
 copy_url_button=Kopiraj
 copied_url_button=Kopirano!
@@ -85,6 +89,8 @@ new_contact_button=Novi kontakt
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Naziv
 new_contact_email_placeholder=E-pošta
+
+
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -228,7 +234,6 @@ call_timeout_notification_text=Vaš poziv nije uspio.
 ## These buttons are displayed when a call has failed:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
 retry_call_button=Pokušaj ponovno
-email_link_button=Pošalji poveznicu e-poštom
 cancel_button=Odustani
 
 cannot_start_call_session_not_ready=Nije moguće započeti poziv, jer sesija nije spremna.
@@ -238,11 +243,15 @@ connection_error_see_console_notification=Poziv nije uspio; Provjerite konzolu z
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
-## by the brand name, or fall back to client_shortname_fallback
+## by the brand name.
 legal_text_and_links3=Korištenjem {{clientShortname}} slažete se sa  {{terms_of_use}} i {{privacy_notice}}.
 legal_text_tos = Uvjetima korištenja
 legal_text_privacy = Pravila o privatnosti
-client_shortname_fallback=ovaj proizvod
+
+## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
+## These 2 strings are displayed before and after a 'Telefonica'
+## logo.
+powered_by_afterLogo=
 
 feedback_call_experience_heading2=Kakav je bio vaš razgovor?
 feedback_what_makes_you_sad=Što vas je učinilo tužnim?
@@ -267,3 +276,15 @@ feedback_rejoin_button=Ponovno se pridruži
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
 feedback_report_user_button=Prijavi korisnika
+
+help_label=Pomoć
+
+## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
+## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_leave_button_label=Napusti
+## LOCALIZATION NOTE (rooms_list_current_conversations):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## We prefer to have no number in the string, but if you need it for your
+## language please use {{num}}.
+rooms_list_deleteConfirmation_label=Jeste li sigurni?
