--- a/hr/toolkit/chrome/global/resetProfile.properties
+++ b/hr/toolkit/chrome/global/resetProfile.properties
@@ -7,6 +7,6 @@
 # LOCALIZATION NOTE (resetUnusedProfile.message): %S is brandShortName.
 resetUnusedProfile.message=Čini se da dugo niste pokretali %S. Želite li obaviti čišćenje za sviježe, potpuno novo iskustvo? I, usput, dobrodošli natrag!
 
-# LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
-resetProfile.resetButton.label=Resetiraj %S…
-resetProfile.resetButton.accesskey=e
+# LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=Osvježi %S…
+refreshProfile.resetButton.accesskey=e
